--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Yashasvi Bajpai</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full-Stack Developer,Software Developer,Competitive Programmer,Environmentalist</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">I am Anushka Vohra</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Company Secretary,Insolvency enthusiast,Stock market Champion,Environmentalist</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
