--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg-my.jpeg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg-my.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
