--- a/index.html
+++ b/index.html
@@ -87,46 +87,46 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2-pic.png" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/smalldp.png" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Yashasvi Bajpai</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Software Developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>yashasvi.bajpai1999@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(+91) 7985240735</span></p>
+                      <p><span class="title-s">Name: </span> <span>Anushka Vohra</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Company Secretary</span></p>
+                      <p><span class="title-s">Email: </span> <span>csanushkavohra@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(+91) ##########</span></p>
                     </div>
                   </div>
                 </div>
                 <div class="the-resume-button-section">
                   <span class="the-resume-button-heading">Prefer the classic way ?  </span>
-                  <span class="the-resume-button-btn"><a class="res-btn" href="https://drive.google.com/file/d/1Ue-gzDzYaZX2AMh05DyJVq_S9JdOS_8y/view?usp=sharing" alt="Resume">  Resume</a></span>
+                  <span class="the-resume-button-btn"><a class="res-btn" href="#" alt="Resume">  Resume</a></span>
                 </div>
                 <br>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>C++ | DS & ALGO</span> <span class="pull-right">85%</span>
+                  <span>SKILL 1</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT | REACT</span> <span class="pull-right">70%</span>
+                  <span>SKILL 2</span> <span class="pull-right">70%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>DJANGO | FLASK</span> <span class="pull-right">75%</span>
+                  <span>SKILL 3</span> <span class="pull-right">75%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PYTHON</span> <span class="pull-right">80%</span>
+                  <span>SKILL 4</span> <span class="pull-right">80%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Deep Learning</span> <span class="pull-right">65%</span>
+                  <span>SKILL 5</span> <span class="pull-right">65%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -141,18 +141,13 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    I am a focused college student (B.Tech in Mechanical and Mechatronics
-Engineering) currently attending The LNMIIT Jaipur.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
                   <p class="lead">
-                    Through the course of my bachelors' degree, I have managed to work with some of the best
-                    developers and designers, through internships at various reputed organisations. Working with them
-                    gave me the neccesary exposure to how the industry works and the detail to which different tools &
-                    technologies are fine-tuned to achieve desired outcomes.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
                   <p class="lead">
-                    In addition to my technological skills, I am a strong advocate of environmental and animal issues
-                     and wish to bring a positive change in the global issues faced by the humanity at large.
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   </p>
                 </div>
               </div>
@@ -186,10 +181,9 @@ Engineering) currently attending The LNMIIT Jaipur.
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Software Development</h2>
+              <h2 class="s-title">Sample</h2>
               <p class="s-description text-center">
-                Experienced industry-grade tools and technologies. Worked with Global scaled organisations on data privacy
-                and authority concerns.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
               </p>
             </div>
           </div>
@@ -200,11 +194,9 @@ Engineering) currently attending The LNMIIT Jaipur.
               <span class="ico-circle"><i class="ion-code-working"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Back-End Development</h2>
+              <h2 class="s-title">Sample</h2>
               <p class="s-description text-center">
-                Handled back-end traffic as well as constructed a complete backend architecture for a Stock-Portfolio
-                management startup, from scratch. Experienced the technicalities of a backend system like authentication, security
-                as well as optimization.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
               </p>
             </div>
           </div>
@@ -215,9 +207,9 @@ Engineering) currently attending The LNMIIT Jaipur.
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Cross-Platform Development</h2>
+              <h2 class="s-title">Sample</h2>
               <p class="s-description text-center">
-                Created Cross-Platform apps for different OS as well as worked on responsive attributes of web apps.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
               </p>
             </div>
           </div>
@@ -228,10 +220,9 @@ Engineering) currently attending The LNMIIT Jaipur.
               <span class="ico-circle"><i class="ion-paintbrush"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Sketching</h2>
+              <h2 class="s-title">Sample</h2>
               <p class="s-description text-center">
-                Completed a professional course on sketching. Basic knowledge about different strokes as well as shading
-                techniques.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
               </p>
             </div>
           </div>
@@ -427,10 +418,10 @@ Engineering) currently attending The LNMIIT Jaipur.
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.facebook.com/yashasvi.bajpai/"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/bajpai.yashasvi/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://www.linkedin.com/in/yashasvibajpai"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://github.com/yashasvibajpai"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <!-- <li><a href="https://www.facebook.com/yashasvi.bajpai/"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li> -->
+                      <li><a href="https://www.instagram.com/vohra.anushka/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="#"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href="#"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
