--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/a-lowercase.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
@@ -95,7 +95,7 @@
                       <p><span class="title-s">Name: </span> <span>Anushka Vohra</span></p>
                       <p><span class="title-s">Profile: </span> <span>Company Secretary</span></p>
                       <p><span class="title-s">Email: </span> <span>csanushkavohra@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(+91) ##########</span></p>
+                      <!-- <p><span class="title-s">Phone: </span> <span>(+91) ##########</span></p> -->
                     </div>
                   </div>
                 </div>
@@ -412,8 +412,8 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Kanpur, U.P, India</li>
-                      <li><span class="ion-ios-telephone"></span> (+91) 7985240735</li>
-                      <li><span class="ion-email"></span> yashasvi.bajpai1999@gmail.com</li>
+                      <!-- <li><span class="ion-ios-telephone"></span> (+91) 7985240735</li> -->
+                      <li><span class="ion-email"></span> csanushkavohra@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
@@ -434,7 +434,10 @@
 
   </section>
   <!--/ Section Contact-footer End /-->
-
+  <p class="footer-heart">
+    Made with <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
+    <img class="emoji" alt="heart" height="20" width="20" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png"></g-emoji> by Yashasvi</a>
+  </p>
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <div id="preloader"></div>
 
@@ -454,6 +457,5 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-
 </body>
 </html>
