--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                       I am available 24x7 for work opportunities as well as for quality discussions. Feel free to connect.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> Kanpur, U.P, India</li>
+                      <li><span class="ion-ios-location"></span> Delhi, India</li>
                       <!-- <li><span class="ion-ios-telephone"></span> (+91) 7985240735</li> -->
                       <li><span class="ion-email"></span> csanushkavohra@gmail.com</li>
                     </ul>
