--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/smalldp.png" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/smalldp.jpeg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
