Update Commit #1 : A series of minor and major commits updating the portfolio content

--- a/index.html
+++ b/index.html
@@ -141,13 +141,14 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Hi there! Welcome to my portfolio website. Here you can know about who I am and what I do.
                   </p>
                   <p class="lead">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    I am currently working as a Deputy Manager at Vinod Kothari and Consultants, in Delhi
                   </p>
                   <p class="lead">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    I belong to the city Kanpur in state of Uttar Pradesh, India. After my initial schooling there, I completed by B.Com from the VSSD college. After this, I worked as a CS trainee in 
+                    Krish Group.
                   </p>
                 </div>
               </div>
