Content update series commit #2
Added linkedin and support for medium

--- a/index.html
+++ b/index.html
@@ -421,8 +421,10 @@
                     <ul>
                       <!-- <li><a href="https://www.facebook.com/yashasvi.bajpai/"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li> -->
                       <li><a href="https://www.instagram.com/vohra.anushka/"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="#"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="#"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/cs-anushka-vohra-94a980158/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+<!--                       <li><a href="https://www.linkedin.com/in/cs-anushka-vohra-94a980158/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li> -->
+<!--                       <ion-icon name="logo-medium"></ion-icon> -->
+<!--                       <li><a href="#"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li> -->
                     </ul>
                   </div>
                 </div>
