minor about changes

--- a/index.html
+++ b/index.html
@@ -94,16 +94,18 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Anushka Vohra</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Company Secretary</span></p>
-                      <p><span class="title-s">Email: </span> <span>csanushkavohra@gmail.com</span></p>
+                      <p><span class="title-s">CS </span> <span>Anushka Vohra</span></p>
+                      <p><span class="title-s">Company Secretary </span> <span>at Vinod Kothari and Consultants</span>
+                      </p>
+                      <!-- <p><span class="title-s">Email: </span>  --><span>csanushkavohra@gmail.com</span></p>
+                      <span class="the-resume-button-btn"><a class="res-btn" href="#" alt="Resume"> CV</a></span>
                       <!-- <p><span class="title-s">Phone: </span> <span>(+91) ##########</span></p> -->
                     </div>
                   </div>
                 </div>
                 <div class="the-resume-button-section">
-                  <span class="the-resume-button-heading">Prefer the classic way ? </span>
-                  <span class="the-resume-button-btn"><a class="res-btn" href="#" alt="Resume"> Resume</a></span>
+                  <!-- <span class="the-resume-button-heading">Prefer the classic way ? </span> -->
+
                 </div>
                 <br>
                 <div class="skill-mf">
