Major portions improvised

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Portfolio</a>
+      <a class="navbar-brand js-scroll" href="#page-top">Anushka Vohra</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -48,10 +48,10 @@
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Services</a>
+            <a class="nav-link js-scroll" href="#service">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Work</a>
+            <a class="nav-link js-scroll" href="#work">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -109,23 +109,33 @@
                 </div>
                 <br>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>SKILL 1</span> <span class="pull-right">85%</span>
-                  <div class="progress">
+                  <p class="title-s">I am capable of</p>
+                  <span>
+                    <ion-icon name="battery-charging-outline" size="large"></ion-icon>
+                  </span> <span class="pull-right">Putting in long hours over a task.</span>
+                  <!-- <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
                       aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <span>SKILL 2</span> <span class="pull-right">70%</span>
-                  <div class="progress">
+                  </div> -->
+                  <br>
+                  <br>
+                  <span>
+                    <ion-icon name="sparkles-outline" size="large"></ion-icon>
+                  </span> <span class="pull-right">Quality work.</span>
+                  <!-- <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                       aria-valuemax="100"></div>
-                  </div>
-                  <span>SKILL 3</span> <span class="pull-right">75%</span>
-                  <div class="progress">
+                  </div> -->
+                  <br>
+                  <br>
+                  <span>
+                    <ion-icon name="flask-outline" size="large"></ion-icon>
+                  </span> <span class="pull-right">Devising creative solutions.</span>
+                  <!-- <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
-                  </div>
-                  <span>SKILL 4</span> <span class="pull-right">80%</span>
+                  </div> -->
+                  <!-- <span>SKILL 4</span> <span class="pull-right">80%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -134,7 +144,7 @@
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                       aria-valuemax="100"></div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="col-md-6">
@@ -153,7 +163,7 @@
                   <p class="lead">
                     I belong to the city Kanpur in state of Uttar Pradesh, India. After my initial schooling there, I
                     completed by B.Com from the VSSD college. After this, I worked as a CS trainee in
-                    Krish Group.
+                    Krish Group, Gurugram before joining Vinod Kothari & Consultants.
                   </p>
                 </div>
               </div>
@@ -187,7 +197,7 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Sample</h2>
+              <h2 class="s-title">Work</h2>
               <p class="s-description text-center">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text
@@ -198,10 +208,12 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
+              <span class="ico-circle">
+                <ion-icon name="bar-chart-outline"></ion-icon>
+              </span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Sample</h2>
+              <h2 class="s-title">Formulate</h2>
               <p class="s-description text-center">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text
@@ -212,10 +224,12 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
+              <span class="ico-circle">
+                <ion-icon name="document-outline"></ion-icon>
+              </span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Sample</h2>
+              <h2 class="s-title">Laws</h2>
               <p class="s-description text-center">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text
@@ -226,13 +240,14 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+              <span class="ico-circle">
+                <ion-icon name="book-outline"></ion-icon>
+              </span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Sample</h2>
+              <h2 class="s-title">Mentor</h2>
               <p class="s-description text-center">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text
+                Guide new trainees and CS aspirants on how to juggle and manage between the myriad of subjects.
               </p>
             </div>
           </div>
@@ -481,6 +496,8 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
