--- a/index.html
+++ b/index.html
@@ -372,6 +372,32 @@
             </a>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a
+              href="https://www.taxmann.com/research/company-and-sebi/top-story/105010000000020950/debt-listed-entities-under-new-requirement-of-quarterly-financial-results-implications-and-actionables-experts-opinion">
+              <div class="work-img">
+                <img src="img/work-taxmann-debt.jpg" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">
+                      Debt listed entities under new requirement of quarterly financial results </h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Company Law</span> / <span class="w-date">September, 2021</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
         <!-- <div class="col-md-4">
           <div class="work-box">
             <a href="https://github.com/yashasvibajpai/feisty-fandoms">
